[tool.poetry]
name = "micromouse_sim"
version = "0.1.0"
description = "Implementation of various maze generation and solving algorithms."
authors = ["Shakya Majumdar <shakyamajumdar1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
imageio = "^2.30.0"
imageio-ffmpeg = "^0.4.8"
numpy = "^1.24.3"
Pillow = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
